--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-whisper-cpp (1.7.4+20240114.99b011a-1) unstable; urgency=medium
+whisper-cpp (1.7.4+33-1) unstable; urgency=medium
 
-  * Based on whisper.cpp version 1.7.4
+  * Update upstream
 
- -- Mathieu Baudier <mbaudier@argeo.org>  Tue, 21 Jan 2025 14:02:39 +0000
+ -- Mathieu Baudier <mbaudier@argeo.org>  Wed, 05 Feb 2025 13:18:06 +0000
