--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-whisper-cpp (1.7.4+95-1) unstable; urgency=medium
+whisper-cpp (1.7.4+95-2) unstable; urgency=medium
 
-  * Update upstream
+  * Improve packaging based on mentoring feedback
 
- -- Mathieu Baudier <mbaudier@argeo.org>  Wed, 05 Feb 2025 15:05:40 +0000
+ -- Mathieu Baudier <mbaudier@argeo.org>  Sun, 23 Feb 2025 11:39:50 +0000
